namespace Iterator.Menu
{
    public class MenuItem
    {
        public MenuItem(string name, int price)
        {
            Name = name;
            Price = price;
        }
        
        public string Name;
        public int Price;
    }
}